--- a/main.html
+++ b/main.html
@@ -5,9 +5,14 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="hero" >
+		<img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+		<h1>Welcome to my Pinterest Clone</h1>
+		<p>Discover the inspsfnasf asjf as lsj flasdlf alsf;</p>
+		<a>Explore Now</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
